objects/KB_Global_Search_And_Replace__c.object
<CustomObject>
    <label>KB Global Search And Replace</label>
    <nameField>
        <label>KB Global Search And Replace Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KB Global Search And Replace</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Channels__c</fullName>
        <label>Channels</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleId__c</fullName>
        <label>Article Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Names__c</fullName>
        <label>Field Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apex_BatchId__c</fullName>
        <label>Apex Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleNumber__c</fullName>
        <label>Article Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishStatus__c</fullName>
        <label>PublishStatus</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_String__c</fullName>
        <label>Search String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsMasterLanguage__c</fullName>
        <label>IsMasterLanguage</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishNewVersion__c</fullName>
        <label>PublishNewVersion</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Comments__c</fullName>
        <label>Exception Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KnowledgeArticleId__c</fullName>
        <label>Knowledge Article Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_String__c</fullName>
        <label>Replacement String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Replacement_Channels__c</fullName>
        <label>Replacement Channels</label>
        <length>4</length>
        <type>Text</type>
    </fields>
</CustomObject>